--- a/style.css
+++ b/style.css
@@ -4,7 +4,26 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #1c1c1c;
+
+ /* Hide the default cursor */
+  /* overflow-x: hidden; Prevent horizontal scrolling */
 }
+.content {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  margin-top: 50px;
+}
+canvas {
+   position: absolute; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 1;
+}
+
 
 .highlight {
   color: #ffc107;
@@ -55,6 +74,7 @@ body {
 
 /* Title Image Container */
 .title-image {
+  z-index: 2;
   position: relative;
   width: 50%;
   height: 100%;
@@ -112,6 +132,7 @@ body {
     background-color: #414143;
     padding: 10px 20px;
     position: relative;
+    z-index: 2;
 }
 
 .logo {
@@ -119,6 +140,7 @@ body {
     align-items: center;
     color: white;
     font-size: 1.2em;
+    z-index: 2;
 }
 
 .logo img {
@@ -318,6 +340,7 @@ text-align: center;
     box-sizing: border-box;
 }
 .image-section img {
+  z-index: 2;
     max-width: 100%;
     height: auto;
     border-radius: 5px;
