--- a/style.css
+++ b/style.css
@@ -694,7 +694,7 @@ column-gap: 20px;
 }
 
 .form-group input {
-  flex-basis: 48%;
+ width:100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
